# modeling_lanternfly_populations

./: Makefile  README.md  environment.yml
data/raw/: raw_lanternfly.parquet
modeling_lanternfly_populations/: __init__.py  dataset.py  environment.yml  features.py  plots.py  pyproject.toml  utils.py
modeling_lanternfly_populations/docs/: mkdocs.yml
modeling_lanternfly_populations/docs/docs/: index.md
modeling_lanternfly_populations/modeling/: mrf.py  predict.py  train.py
modeling_lanternfly_populations/modeling_lanternfly_populations/: dataset.py  features.py
modeling_lanternfly_populations/modeling_lanternfly_populations/modeling/: predict.py  train.py
notebooks/: analyze_mrf_output.ipynb  explore_grid_data.ipynb
