[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "modeling_lanternfly_populations"
version = "0.0.1"
description = "Utilizes iNaturalist Lanternfly populations for spatial modeling using Markov Random Fields, with comparison against Bayesian methods such as GPs."
authors = [
  { name = "Patrick Sicurello (JHU)" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["modeling_lanternfly_populations"]
include = ["pyproject.toml", "modeling_lanternfly_populations/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["modeling_lanternfly_populations"]
force-sort-within-sections = true

